--- a/website/static/css/homepage.css
+++ b/website/static/css/homepage.css
@@ -573,6 +573,7 @@ h4{
             background: var(--burgundy);
             width: 335px;
             border-radius: 99px;
+            margin-bottom: 0px;
 
         }
 
