--- a/website/templates/connect.html
+++ b/website/templates/connect.html
@@ -2,28 +2,172 @@
 <html lang="en">
 <head>
     <link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900italic,900' rel='stylesheet' type='text/css'>
-
-    <!--    <link rel="stylesheet" href="../static/css/homepage.css"> link css file-->
+    <link rel="stylesheet" href="../static/css/connect.css">
     <meta charset="UTF-8">
     <title>Greater Bethlehem Temple Church</title>
 </head>
 <body>
     <header>
-        <a href="/"><img src="../static/images/logo.png" class="nav-logo"></a>
-        <input type = "checkbox" id = "nav-toggle" class = "nav-toggle">
-        <nav>
-            <ul>
-                <li><a href="#">Watch</a></li>
-                <li><a href="#">Give</a></li>
-                <li><a href="#">Connect</a></li>
-                <li><a href="#">Events</a></li>
-                <li><a href="#">About US</a></li>
-             </ul>
-        </nav>
-        <label for = "nav-toggle" class = "nav-toggle-label">
-        <span></span>
-        </label>
+        <div class="menu">
+            <a href="/" class="nav-logo-container"><img src="../static/images/white_logo.png" class="nav-logo"></a>
+            <input type = "checkbox" id = "nav-toggle" class = "nav-toggle">
+            <nav>
+                <ul>
+                    <li><a href="/watch">Watch</a></li>
+                    <li><a href="/give">Give</a></li>
+                    <li><a href="/connect">Connect</a></li>
+                    <li><a href="/events">Events</a></li>
+                    <li><a href="/about-us">About US</a></li>
+                </ul>
+            </nav>
+            <label for = "nav-toggle" class = "nav-toggle-label">
+            <span></span>
+            </label>
+        </div>
     </header>
+
+
+
+
+
+    <div class="banner">
+        <img src="../static/images/connect.jpg" class="event-img">
+        <div class="banner-h-container">
+            <h2>Connect With Us</h2>
+        </div>
+        <div class="banner-msg">
+            <p>The Greater Bethlehem Temple Family is a resource to the community and are always spiritually connected.
+                We would love to welcome you to our family, or simply connect with a phone call to check in on you.
+                We would love to get to know you and your family!
+            </p>
+        </div>
+    </div>
+    <div class="mobile-banner">
+        <div class="mobile-banner-h-container">
+            <h2>Connect With Us</h2>
+        </div>
+        <img src="../static/images/connect.jpg" class="mobile-offering-img">
+    </div>
+            <div class="spacer"></div>
+
+    <div class="buffer"></div>
+
+
+    <div class="highlights-container">
+        <div class="grid-backdrop">
+                <h2>Ministries</h2>
+                <hr class="ministries-divider">
+
+        <div class="grid">
+            <div>
+                <div class="image">
+                    <a href="/youth"><img src="../static/images/youth.jpg" class="image__img"></a>
+                    <div class="static__image__title">
+                        <p>Children & Youth Ministries</p>
+                    </div>
+		            <a href="/youth"><div class="image__overlay image__overlay--primary">
+			        <div class="image__title">Children & Youth Ministries</div>
+			        <p class="image__description">
+				        Join the Youth in Ministry!
+			        </p>
+                    </div></a>
+	            </div>
+            </div>
+            <div>
+                <div class="image">
+                    <a href="/missions"><img src="../static/images/missions.jpg" class="image__img"></a>
+                    <div class="static__image__title">
+                        <p>Missions</p>
+                    </div>
+		            <a href="/missions"><div class="image__overlay image__overlay--primary">
+			        <div class="image__title">Missions</div>
+			        <p class="image__description">
+				        JOIN THE MISSION!
+			        </p>
+                    </div></a>
+	            </div>
+            </div>
+            <div>
+                <div class="image">
+                    <a href="/sundayschool"><img src="../static/images/sundayschool.jpg" class="image__img"></a>
+                    <div class="static__image__title">
+                        <p>Sunday School</p>
+                    </div>
+		            <a href="/sundayschool"><div class="image__overlay image__overlay--primary">
+			        <div class="image__title">Sunday School</div>
+			        <p class="image__description">
+				        We would love to see you this Sunday!
+			        </p>
+                    </div></a>
+	            </div>
+
+            </div>
+            <div>
+                <div class="image">
+                    <a href="/arts"><img src="../static/images/musicFA.jpg" class="image__img"></a>
+                    <div class="static__image__title">
+                        <p>Music & Fine Arts</p>
+                    </div>
+		            <a href="/arts"><div class="image__overlay image__overlay--primary">
+			        <div class="image__title">Music & Fine Arts</div>
+			        <p class="image__description">
+                        Give the Lord praise through the arts! </p>
+                    </div></a>
+	            </div>
+            </div>
+            <div>
+                <div class="image">
+                    <a href="/education"><img src="../static/images/educate.jpg" class="image__img"></a>
+                    <div class="static__image__title">
+                        <p>Educational Programs</p>
+                    </div>
+		            <a href="/education"><div class="image__overlay image__overlay--primary">
+			        <div class="image__title">Educational Programs</div>
+			        <p class="image__description">
+				        Join us in LEARNING!
+			        </p>
+                    </div></a>
+	            </div>
+            </div>
+            <div>
+                <div class="image">
+                    <a href="/aberdeen"><img src="../static/images/aberdeen.webp" class="image__img"></a>
+                    <div class="static__image__title">
+                        <p>Aberdeen Campus</p>
+                    </div>
+		            <a href="/aberdeen"><div class="image__overlay image__overlay--primary">
+			        <div class="image__title">Aberdeen Campus</div>
+			        <p class="image__description">
+				        Join the congregation in Aberdeen!
+			        </p>
+                    </div></a>
+	            </div>
+            </div>
+            <div>
+                <div class="image">
+                    <a href="/evangelism"><img src="../static/images/evangelism.jpg" class="image__img"></a>
+                    <div class="static__image__title">
+                        <p>Evangelism & Outreach</p>
+                    </div>
+		            <a href="/evangelism"><div class="image__overlay image__overlay--primary">
+			        <div class="image__title">Evangelism & Outreach</div>
+			        <p class="image__description">
+				        Lets spread God's love!
+			        </p>
+                    </div></a>
+	            </div>
+            </div>
+        </div>
+        <div class="more-grid-backdrop">
+
+        </div>
+    </div>
+    </div>
+
+
+
+
+
 
       <div class="footer-container">
     <div class="column">
@@ -35,7 +179,7 @@
         <div class="footer-divider"></div>
 
         <div class="footer-links">
-                <a href="/" class="footer-logo-container"><img src="../static/images/logo.png" class="footer-logo"></a>
+                <a href="/" class="footer-logo-container"><img src="../static/images/white_logo.png" class="footer-logo"></a>
             <div class="socials">
                 <a href="https://www.facebook.com/GBTchurch"
                    class="footer-logo-container"><img src="../static/images/fb.webp" class="social-logo"></a>
