--- a/website/templates/homepage.html
+++ b/website/templates/homepage.html
@@ -37,8 +37,8 @@
         <div class="floating-buttons-container">
             <div class="floating-buttons">
                 <ul>
-                    <li><a href="#">In-Person Service</a></li>
-                    <li><a href="/watch">Watch Online</a></li>
+                    <a href="#"><li>In-Person Service</li></a>
+                    <a href="/watch"><li>Watch Online</li></a>
                 </ul>
             </div>
         </div>
