--- a/website/templates/events.html
+++ b/website/templates/events.html
@@ -45,7 +45,7 @@
         <div class="mobile-banner-h-container">
             <h2>EVENTS</h2>
         </div>
-        <img src="../static/images/table.jpg" class="mobile-offering-img">
+        <img src="../static/images/table1.jpg" class="mobile-offering-img">
     </div>
             <div class="spacer"></div>
 
